--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -1,4 +1,4 @@
-form:not(.todays-tasks) {
+form {
 	display: flex;
 	flex-direction: column;
 	height: 100%;
@@ -50,6 +50,10 @@ form:not(.login, .register) button {
 }
 
 .btn {
+	display: flex;
+	column-gap: 0.8rem;
+	align-items: center;
+	justify-content: center;
 	padding: 1.6rem;
 	background: var(--secondary);
 	color: var(--primary);
@@ -62,6 +66,10 @@ form:not(.login, .register) button {
 	background: var(--primary);
 	color: var(--secondary);
 	border: 1px solid var(--secondary);
+
+	& .icon {
+		background-color: var(--secondary);
+	}
 
 	&:focus-visible {
 		outline-color: var(--secondary);
@@ -97,6 +105,16 @@ form:not(.login, .register) button {
 		width: 2rem;
 		height: 2rem;
 	}
+
+	&.special {
+		border-radius: 0.4rem;
+		background: var(--primary);
+		color: var(--secondary);
+
+		& .icon {
+			background-color: var(--secondary);
+		}
+	}
 }
 
 input,
@@ -128,37 +146,6 @@ a.link {
 
 	& .icon {
 		background-color: var(--teal500);
-	}
-}
-
-form.todays-tasks {
-	display: grid;
-	row-gap: 0.8rem;
-	ul {
-		display: grid;
-		// row-gap: 0.4rem;
-		padding: 0;
-	}
-
-	& li {
-		list-style: none;
-
-		label {
-			display: grid;
-			grid-template-columns: max-content auto;
-			column-gap: 0.8rem;
-			padding-block: 0.4rem;
-			cursor: pointer;
-
-			&:hover {
-				background: var(--transp-black-3);
-			}
-		}
-	}
-
-	& input[type="checkbox"] {
-		height: 2.4rem;
-		width: 2.4rem;
 	}
 }
 
@@ -204,5 +191,7 @@ form.todays-tasks {
 }
 
 .dashboard-link {
+	width: max-content;
+	justify-self: flex-end;
 	cursor: pointer;
 }
