--- a/scss/_projects_page.scss
+++ b/scss/_projects_page.scss
@@ -5,23 +5,44 @@
 	column-gap: 3.2rem;
 	margin-inline: 3.2rem;
 
-	@media (min-width: $small) {
+	@media (min-width: $medium) {
 		display: grid;
 		grid-template-columns: 1fr 4fr;
 	}
 
-	& .todays-tasks {
+	& .calendar-link {
 		background: white;
 		padding: 1.6rem;
 		box-shadow: var(--elevation-2);
 		border-radius: 2rem;
 		height: max-content;
+
+		& .title {
+			display: block;
+			text-align: center;
+			a {
+				color: var(--teal500);
+				font-weight: 600;
+				font-size: 1.8rem;
+			}
+		}
+
+		& li {
+			list-style: circle;
+			text-align: left;
+		}
 	}
 
 	& div.overview__wrapper {
 		display: grid;
 		grid-template-rows: max-content auto;
 		row-gap: 1.6rem;
+
+		& button.add-new-project {
+			width: max-content;
+			height: max-content;
+			justify-self: flex-end;
+		}
 	}
 }
 
@@ -100,6 +121,7 @@
 }
 
 .projects__heading {
+	position: relative;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -107,6 +129,11 @@
 	margin-inline: 3.2rem;
 	align-items: center;
 	column-gap: 1.6rem;
+
+	& .dashboard-link {
+		position: absolute;
+		right: 0;
+	}
 
 	& span {
 		display: flex;
@@ -117,12 +144,6 @@
 		grid-row: 1;
 		grid-column: 1/-1;
 		justify-self: center;
-	}
-
-	& .dashboard-link {
-		grid-row: 1;
-		grid-column: 1/-1;
-		justify-self: flex-end;
 	}
 
 	@media (min-width: $small) {
