--- a/css/main__1661872787419__.css
+++ b/css/main__1661872787419__.css
@@ -697,14 +697,15 @@ tile-context-menu input {
   grid-template-rows: auto max-content;
   row-gap: 1.6rem;
   padding: 1.6rem;
-  height: calc(100vh - 12.8rem);
-  width: calc(100vw - 6.4rem);
+  height: 100vh;
+  width: 100vw;
   overflow-y: auto;
   background: var(--secondary);
   box-shadow: var(--elevation-6);
   border-radius: 0.4rem;
   -moz-column-gap: 1.6rem;
        column-gap: 1.6rem;
+  padding-bottom: 6.9rem;
 }
 .overlay div.wrapper.note {
   width: 50vmin;
@@ -719,6 +720,20 @@ tile-context-menu input {
   height: max-content;
   background: var(--primary);
 }
+.overlay div.wrapper .modal-buttons {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column: 1/3;
+  -moz-column-gap: 1.6rem;
+       column-gap: 1.6rem;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background: var(--secondary);
+  padding: 0.8rem 1.6rem;
+  border-top: 1px solid var(--primary);
+  left: 0;
+}
 .overlay .modal--contents {
   grid-column: 1/3;
 }
@@ -729,9 +744,16 @@ tile-context-menu input {
 .overlay button:last-child {
   grid-column: 2;
 }
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
   .overlay div.wrapper:not(.note):not(.statuses) {
     width: 80rem;
+    height: calc(100vh - 12.8rem);
+    padding-bottom: 1.6rem;
+  }
+  .overlay div.wrapper:not(.note):not(.statuses) .modal-buttons {
+    position: static;
+    padding: 0;
+    border: none;
   }
 }
 
