--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -11,8 +11,8 @@
 		grid-template-rows: auto max-content;
 		row-gap: 1.6rem;
 		padding: 1.6rem;
-		height: calc(100vh - 12.8rem);
-		width: calc(100vw - 6.4rem);
+		height: 100vh;
+		width: 100vw;
 		overflow-y: auto;
 		background: var(--secondary);
 		// border: 1px solid var(--transp-black-1);
@@ -33,6 +33,27 @@
 			height: max-content;
 			background: var(--primary);
 		}
+
+		& .modal-buttons {
+			display: grid;
+			grid-template-columns: 1fr 1fr;
+			grid-column: 1/3;
+			column-gap: 1.6rem;
+		}
+
+		&:not(.note):not(.statuses) {
+			padding-bottom: 6.9rem; // height of button wrapper plus gap;
+
+			.modal-buttons {
+				position: fixed;
+				bottom: 0;
+				width: 100%;
+				background: var(--secondary);
+				padding: 0.8rem 1.6rem;
+				border-top: 1px solid var(--primary);
+				left: 0;
+			}
+		}
 	}
 
 	& .modal--contents {
@@ -48,9 +69,17 @@
 		}
 	}
 
-	@media (min-width: $medium) {
+	@media (min-width: $small) {
 		& div.wrapper:not(.note):not(.statuses) {
 			width: 80rem;
+			height: calc(100vh - 12.8rem);
+			padding-bottom: 1.6rem; // accounting for padding for buttons on mobile
+
+			& .modal-buttons {
+				position: static;
+				padding: 0;
+				border: none;
+			}
 		}
 	}
 }
