--- a/scss/_category_legend.scss
+++ b/scss/_category_legend.scss
@@ -39,7 +39,7 @@
 	position: absolute;
 	z-index: var(--zIndexContextMenu);
 	top: 50%;
-	left: 12.5%;
+	left: 35%;
 	background: white;
 	border: 1px solid var(--primary);
 
@@ -48,7 +48,7 @@
 		border: none;
 		border-bottom: 1px solid var(--primary);
 		border-radius: unset;
-		padding: 0.4rem;
+		padding: 0.8rem 1.6rem;
 		&:last-child {
 			border: none;
 		}
