added ability to change task status inside task modals

--- a/css/main__1661955658102__.css
+++ b/css/main__1661955658102__.css
@@ -720,6 +720,7 @@ tile-context-menu input {
   height: 100%;
 }
 .overlay div.wrapper.statuses {
+  position: static;
   height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
