--- a/css/main__1662731975950__.css
+++ b/css/main__1662731975950__.css
@@ -766,13 +766,14 @@ tile-context-menu input {
 }
 @media (min-width: 1024px) {
   .overlay div.wrapper:not(.statuses) {
+    position: relative;
     width: 80rem;
     height: calc(100vh - 12.8rem);
   }
 }
 
 .warning-overlay {
-  position: absolute;
+  position: fixed;
   display: grid;
   grid-template-rows: auto -webkit-max-content;
   grid-template-rows: auto max-content;
@@ -802,15 +803,22 @@ tile-context-menu input {
 }
 
 .overlay-background {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: var(--primary);
+  z-index: 1;
   filter: opacity(0.85);
 }
 
+@media (min-width: 768px) {
+  .overlay-background,
+.warning-overlay {
+    position: absolute;
+  }
+}
 .category_legend--wrapper {
   position: relative;
   display: flex;
