--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -82,6 +82,7 @@
 
 	@media (min-width: $medium) {
 		& div.wrapper:not(.statuses) {
+			position: relative;
 			width: 80rem;
 			height: calc(100vh - 12.8rem);
 		}
@@ -89,7 +90,7 @@
 }
 
 .warning-overlay {
-	position: absolute;
+	position: fixed;
 	display: grid;
 	grid-template-rows: auto max-content;
 	top: 0;
@@ -120,11 +121,19 @@
 }
 
 .overlay-background {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
 	background: var(--primary);
+	z-index: 1;
 	filter: opacity(0.85);
+}
+
+@media (min-width: $small) {
+	.overlay-background,
+	.warning-overlay {
+		position: absolute;
+	}
 }
